--- a/_posts/2019-12-02-3D-Notes.markdown
+++ b/_posts/2019-12-02-3D-Notes.markdown
@@ -16,3 +16,7 @@ categories: delaunator
 具体请见https://blog.csdn.net/yjr3426619/article/details/80875271
 - dll文件  
 动态链接库文件。它和静态链接库的区别在于，静态链接库不管你使用与否都会被包含在最后的exe文件中。而动态链接库则用了我们就添加，不用就不加。
+- 数据的压缩  
+通过长度为l对包围盒进行每个坐标轴上的划分，每个小方格只保留离该小方格中心点最近的采样点。根据实践可以将48万个点压缩成5万个点。
+先试一下自己能不能写出这个数据的压缩
+-
