--- a/_posts/2019-12-03-PCL-Notes.markdown
+++ b/_posts/2019-12-03-PCL-Notes.markdown
@@ -40,5 +40,6 @@ DATA ascii
 ...
 接下来就是每一行一个点的x,y,z坐标，如果以ascii的方式的话
 ```
-- kdTree  
-一种数据结构，便于三维空间内进行范围搜索和最近邻搜索
+- kdTree   
+一种数据结构，便于三维空间内进行范围搜索和最近邻搜索  
+作为输入源的点云数据不具有拓扑信息，所以要解决这个问题即建立离散点之间的几何拓扑信息  
